src/objects/ISA_Transfer_In__c.object
<CustomObject>
    <description>Holds the ISA Transfer Workflow</description>
    <fields>
        <fullName>Acceptance_Date__c</fullName>
        <label>Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Creation_Notification_Sent__c</fullName>
        <label>Account Creation Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ISAs Transfer In</relationshipLabel>
        <relationshipName>ISAs_Transfer_In</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Information_Received__c</fullName>
        <label>All Information Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ISAs Transfer In</relationshipLabel>
        <relationshipName>ISAs_Transfer_In</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Stage__c</fullName>
        <formula>if (isblank ( Form_Sent__c ),  
&quot;Transfer Received&quot; ,
if (isblank (  Payment_Received__c  ) , &quot;With Old Manager&quot; ,
if (isblank (   Payment_Processed__c  ), &quot;Payment Received&quot; , &quot;Transfer History&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Timer__c</fullName>
        <formula>if (isblank ( Form_Sent__c ),  
Timer_1_Status__c ,
if (isblank (  Payment_Received__c  ) , Timer_2_Status__c ,
if (isblank (   Payment_Processed__c  ), Timer_4_Status__c , Timer_3_Status__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Timer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_1st_Subscription_Date__c</fullName>
        <label>Current Year 1st Subscription Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Scanned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Scanned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_Image__c</fullName>
        <formula>if( Flag__c = &quot;Amber&quot; , IMAGE(&quot;/resource/STNew&quot;,&quot;Amber&quot;,20,20),
if( Flag__c = &quot;Red&quot; , IMAGE(&quot;/resource/STTech&quot;,&quot;Red&quot;,20,20),
IMAGE(&quot;/resource/STAssigned&quot;,&quot;Green&quot;,20,20)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Sent__c</fullName>
        <label>Form Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>History_Transfer_Form_Received__c</fullName>
        <label>History Transfer Form Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ISA_Manager__c</fullName>
        <label>ISA Manager</label>
        <referenceTo>ISA_Manager__c</referenceTo>
        <relationshipLabel>ISAs Transfer In</relationshipLabel>
        <relationshipName>ISAs_Transfer_In</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ISA_Type__c</fullName>
        <label>ISA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Stocks and Shares</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISA_Z_Reference__c</fullName>
        <label>ISA Z Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Missing__c</fullName>
        <label>Information Missing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account number (Cash only)</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Date of declaration</fullName>
                </value>
                <value>
                    <fullName>Instructions for stocks and shares</fullName>
                </value>
                <value>
                    <fullName>ISA provider&apos;s address</fullName>
                </value>
                <value>
                    <fullName>ISA provider&apos;s name</fullName>
                </value>
                <value>
                    <fullName>National Insurance number</fullName>
                </value>
                <value>
                    <fullName>Reference number (IF-ISA/S&amp;S)</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>Sort code (Cash only)</fullName>
                </value>
                <value>
                    <fullName>Type of ISA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Details_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirm that the following details are the same as in the admin screens: First Name, Last Name, DoB, Address, Postcode, Phone Number</inlineHelpText>
        <label>Member Details Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Insurance_Number__c</fullName>
        <label>National Insurance Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Manager_Additional_Time_Flag__c</fullName>
        <label>Old Manager Additional Time Flag</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Processed__c</fullName>
        <label>Payment Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <label>Payment Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Type_Received__c</fullName>
        <label>Payment Type Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>BACs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Timer_Paused__c</fullName>
        <label>Request Timer Paused</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscription_Amount__c</fullName>
        <label>Subscription Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Timer_1_Status__c</fullName>
        <formula>if(
 (CASE( MOD( Transfer_Received_Date__c - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;) = &quot;Monday&quot;),

If ( ISBLANK( Request_Timer_Paused__c ),  
(Transfer_Received_Date__c + 5)-DATEVALUE(NOW()) , 
if(ISBLANK( Request_Timer_Paused__c ), 99, (DATEVALUE(All_Information_Received__c)+ 5) -DATEVALUE (NOW()))),

If ( ISBLANK( Request_Timer_Paused__c ),  
(Transfer_Received_Date__c + 7)-DATEVALUE(NOW()) , 
if(ISBLANK( Request_Timer_Paused__c ), 99, (DATEVALUE(All_Information_Received__c)+ 7) - DATEVALUE (NOW()) ))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timer 1 Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timer_2_Status__c</fullName>
        <formula>if( ISPICKVAL( ISA_Type__c , &quot;Cash&quot;), 

if (isblank( Old_Manager_Additional_Time_Flag__c ),  (DATEVALUE(Form_Sent__c) +7) - DATEVALUE(NOW()), (DATEVALUE(Form_Sent__c) +15)-DATEVALUE(NOW())),
if (isblank( Old_Manager_Additional_Time_Flag__c ),  (DATEVALUE(Form_Sent__c) +15) - DATEVALUE(NOW()), (DATEVALUE(Form_Sent__c) +22)-DATEVALUE(NOW()) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timer 2 Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timer_3_Status__c</fullName>
        <formula>if (isblank( Old_Manager_Additional_Time_Flag__c ),  (DATEVALUE(Form_Sent__c) +30)- DATEVALUE(NOW()), (DATEVALUE(Form_Sent__c) +37)-DATEVALUE(NOW()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timer 3 Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Received_Date__c</fullName>
        <label>Transfer Received Date</label>
        <type>Date</type>
    </fields>
    <label>ISA Transfer In</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Current_Timer__c</columns>
        <columns>Flag_Image__c</columns>
        <columns>Current_Stage__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR 5 OR (2 AND 6) OR (7 AND 4) OR (8 AND 6)</booleanFilter>
        <columns>NAME</columns>
        <columns>Transfer_Received_Date__c</columns>
        <columns>Form_Sent__c</columns>
        <columns>Flag_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Timer_Paused__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>All_Information_Received__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Old_Manager_Additional_Time_Flag__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Payment_Received__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>History_Transfer_Form_Received__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Request_Timer_Paused__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Old_Manager_Additional_Time_Flag__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Transfer_Received_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Active Transfers</label>
    </listViews>
    <listViews>
        <fullName>All_Delayed</fullName>
        <booleanFilter>(1 AND 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Transfer_Received_Date__c</columns>
        <columns>Form_Sent__c</columns>
        <columns>Flag_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Old_Manager_Additional_Time_Flag__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Payment_Received__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Delayed by Manager</label>
    </listViews>
    <listViews>
        <fullName>All_Missing</fullName>
        <booleanFilter>(1 AND 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Transfer_Received_Date__c</columns>
        <columns>Form_Sent__c</columns>
        <columns>Flag_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Timer_Paused__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>All_Information_Received__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Missing Information</label>
    </listViews>
    <listViews>
        <fullName>All_Paused</fullName>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Transfer_Received_Date__c</columns>
        <columns>Form_Sent__c</columns>
        <columns>Flag_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Timer_Paused__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>All_Information_Received__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Old_Manager_Additional_Time_Flag__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Payment_Received__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Paused</label>
    </listViews>
    <nameField>
        <displayFormat>ISATrans-{0000}</displayFormat>
        <label>ISA Transfer In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ISAs Transfer In</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>